Fix alignment of simple profile card icons  (#237)
* fix alignment of heart

* undo spacing changes

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1693,10 +1693,9 @@ $green-font-color: #19B028;
 }
 
 .simple-profile-card__avatar-container {
-  width: 56px; // TODO: figure out why chrome doesn't render this as 50px
+  width: 50px; 
   margin-right: 15px;
 }
-
 
 //
 // (end) v0 styles
